# guide

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Tests/: CMakeLists.txt
Tests/HelloWorld/: CMakeLists.txt
hooks/: pre-commit-clang-format.py
src/: CMakeLists.txt  cApp.cpp  cApp.h  cMain.cpp  cMain.h
